<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="50dp"
                android:contentDescription="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/icon_logo" />

            <include
                android:id="@+id/sideTab"
                layout="@layout/menu_sidetab"
                android:layout_marginTop="60dp"
                android:layout_width="180dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/menuDiv"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="50dp"
                android:text="@string/divMenu"
                android:textColor="@color/black"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/menuDescribe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/divMenu"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/row2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal"
                android:padding="2dp">

                <Button
                    android:id="@+id/button1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Button 1" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Button 2" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Button 3" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Button 4" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Button 5" />
            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="400dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <!-- 첫 번째 행 -->
                <LinearLayout
                    android:id="@+id/row2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    android:padding="2dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/row1">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/maclunchCard"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        app:cardCornerRadius="20dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/maclunch"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/maclunchImage"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="10dp"
                                android:text="@string/maclunch"
                                android:textColor="@color/black"
                                android:textSize="20sp" />

                            <ImageView
                                android:id="@+id/maclunchImage"
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="15dp"
                                android:contentDescription="@null"
                                android:src="@drawable/icon_maclunch" />

                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/happysnackCard"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        app:cardCornerRadius="20dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/happysnack"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/happysnackImage"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="10dp"
                                android:text="@string/happysnack"
                                android:textColor="@color/black"
                                android:textSize="20sp" />

                            <ImageView
                                android:id="@+id/happysnackImage"
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="15dp"
                                android:contentDescription="@null"
                                android:src="@drawable/icon_side" />

                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/row3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:padding="2dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/row2">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/dessertcoffeeCard"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        app:cardCornerRadius="20dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/dessertcoffee"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/dessertcoffeeImage"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="10dp"
                                android:text="@string/dessertcoffee"
                                android:textColor="@color/black"
                                android:textSize="20sp" />

                            <ImageView
                                android:id="@+id/dessertcoffeeImage"
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="15dp"
                                android:contentDescription="@null"
                                android:src="@drawable/icon_coffeedessert" />

                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/specialtyCard"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        app:cardCornerRadius="20dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/speciality"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/specialtyImage"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="10dp"
                                android:contentDescription="@null"
                                android:text="@string/speciality"
                                android:textColor="@color/black"
                                android:textSize="20sp" />

                            <ImageView
                                android:id="@+id/specialtyImage"
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="15dp"
                                android:contentDescription="@null"
                                android:src="@drawable/icon_specialty" />

                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>


            </LinearLayout>
            </ScrollView>



        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>